Gutenberg blocks: Fix CSS for Form and Contact Info blocks (#12156)
* Gutenberg blocks: Fix CSS for Form and Contact Info blocks

* Reduce the right/left padding for Parent blocks.
* Fix word-break on small screens for the required toggle control

* Gutenberg blocks: Update word-break property on toggle and add one to the required label

* Gutenberg blocks: Completely remove paddings from Parent blocks

--- a/extensions/blocks/contact-form/editor.scss
+++ b/extensions/blocks/contact-form/editor.scss
@@ -1,14 +1,6 @@
 @import '../../shared/styles/gutenberg-colors.scss';
 @import '../../shared/styles/gutenberg-variables.scss';
 
-.jetpack-contact-form {
-	padding: 10px 18px;
-
-	&.has-intro {
-		padding: 0;
-	}
-}
-
 .jetpack-contact-form .components-placeholder {
 	padding: 24px;
 
@@ -55,13 +47,20 @@
 		margin-top:-1px;
 		margin-bottom: -3px;
 
-		.components-form-toggle {
-			margin: 2px 8px 0 0;
+		&.jetpack-field-label__required {
+			.components-form-toggle {
+				margin: 2px 8px 0 0;
+			}
+
+			.components-toggle-control__label {
+				word-break: normal;
+			}
 		}
 	}
 
 	.required {
 		color: var( --color-error );
+		word-break: normal;
 	}
 
 	.components-toggle-control .components-base-control__field {
@@ -83,6 +82,7 @@
 	margin: 0;
 	margin-bottom: 2px;
 	padding: 0;
+	width: auto;
 
 	&:focus {
 		border-color: $white;
